--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,14 @@
   "require-dev": {
     "phpunit/phpunit": "5.2.*"
   },
-  "autoload" : {
-    "psr-0" : {
-      "OLOG" : "",
-      "PHPModelDemo" : "",
-      "Tests" : ""
+  "require": {
+    "danielstjules/stringy": "~2.3"
+  },
+  "autoload": {
+    "psr-0": {
+      "OLOG": "",
+      "PHPModelDemo": "",
+      "Tests": ""
     }
   }
 }
