--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "o-log/php-model",
+  "description": "Fast PHP ORM with caching.",
   "require-dev": {
     "phpunit/phpunit": "5.2.*"
   },
