--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
   "require": {
     "danielstjules/stringy": "~2.3",
     "o-log/php-db": "0.*",
-    "o-log/php-cache": "0.*"
+    "o-log/php-cache": "0.*",
+    "o-log/php-http": "0.*"
   },
   "autoload-dev": {
     "psr-0": {
